Kubernetes/GitOps/Gotify/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.gotify.smartmur.lab`) # change to your domain
      kind: Rule
      services:
        - name: gotify
          port: 80
    - match: Host(`gotify.smartmur.lab`) # change to your domain
      kind: Rule
      services:
        - name: gotify
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: smartmur-tls # change to your cert
